# student-zkp

./: .dockerignore  .gitignore  Dockerfile  README.md  ROADMAP.md  TESTING.md  final_plan_md.md  scaffold-spec.md
.claude/: settings.local.json
crypto-core/: Cargo.toml
crypto-core/include/: studentzkp_crypto.h
crypto-core/src/: ffi.rs  lib.rs  studentzkp_crypto.udl
docs/: api.md  architecture.md  threat-model.md
documentation/: TODO-before-submission.md  business-model.md  overview.md  setup-guide.md  technical-documentation.md
holder-android/: README.md
holder-android/StudentZK/: README.md  settings.gradle.kts
holder-android/StudentZK/app/: build.gradle.kts
holder-android/StudentZK/app/src/main/: AndroidManifest.xml
holder-android/StudentZK/app/src/main/res/drawable/: ic_splash_icon.xml
holder-android/StudentZK/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
holder-android/StudentZK/gradle/: libs.versions.toml
holder-android/StudentZK/gradle/wrapper/: gradle-wrapper.properties
issuer-backend/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
issuer-backend/src/main/kotlin/hr/fer/studentzkp/: StudentZkpApplication.kt
issuer-backend/src/main/kotlin/hr/fer/studentzkp/config/: EmbeddedPostgresConfig.kt  SecurityConfig.kt  StudentRegistryConfig.kt
issuer-backend/src/main/kotlin/hr/fer/studentzkp/controller/: BbsKeyController.kt  DevCredentialOfferController.kt  HealthController.kt  (+6 more)
issuer-backend/src/main/resources/: application-local.example.yml  application.yml
issuer-backend/src/main/resources/db/migration/: V1__init_schema.sql  V2__seed_credential_types.sql  V3__phase1_adjustments.sql  V4__status_idx_sequence.sql  V5__add_age_credential_type.sql
issuer-backend/src/test/kotlin/hr/fer/studentzkp/: StudentZkpApplicationTests.kt
scripts/: build-crypto.ps1  build-crypto.sh  demo.ps1  demo.sh
verifier-web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
verifier-web/src/: App.tsx
verifier-web/src/lib/: verify.ts
(+58 files in other folders)
