[package]
name = "studentzkp-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TODO: Phase 2 — uncomment when adding BBS+ support
# dock_crypto = { version = "0.35", features = ["bbs_plus"] }

# TODO: Phase 3 — uncomment for Android UniFFI bindings
# uniffi = "0.28"
