[package]
name = "studentzkp-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TODO Phase 2 — uncomment when BBS+ issuance lands.
# Both crates are audited, Apache-2.0, and support BLS12-381 (final_plan §5.2, §10).
# dock_crypto = { version = "0.35", features = ["bbs_plus", "accumulator"] }

# TODO Phase 0/2 — uncomment to generate UniFFI bindings for Android.
# See crypto-core/src/studentzkp_crypto.udl for the interface.
# uniffi = { version = "0.28", features = ["build"] }
#
# [build-dependencies]
# uniffi = { version = "0.28", features = ["build"] }
