[package]
name = "studentzkp-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# BBS+ on BLS12-381 — audited, Apache-2.0, by docknetwork (final_plan §5.2).
# Pinning ark-* to 0.4 because bbs_plus 0.25 depends on that family.
bbs_plus = "0.25"
dock_crypto_utils = "0.23"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-std = { version = "0.4", features = ["getrandom"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TODO Phase 2 — uncomment to generate UniFFI bindings for Android.
# See crypto-core/src/studentzkp_crypto.udl for the interface.
# uniffi = { version = "0.28", features = ["build"] }
#
# [build-dependencies]
# uniffi = { version = "0.28", features = ["build"] }
